--- a/xmas.html
+++ b/xmas.html
@@ -9,6 +9,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
 
     <title>Christmas</title>
+    <link rel="icon" type="image/png" href="bell.ico">
   </head>
   <body>
 
@@ -88,7 +89,7 @@
           <a type="button" class="btn btn-outline-light btn-sm col-lg-3" href="photos.html">Photos</a>
           <a type="button" class="btn btn-outline-light btn-sm col-lg-3" href="articles.html">Articles</a>
         </div>
-        <p>© Copyright 2020 LizaRoy</p>
+        <p><br>© Copyright 2020 LizaRoy</p>
       </section>
 
 
